--- a/uscensusdata.html
+++ b/uscensusdata.html
@@ -7,6 +7,9 @@
         .state {
             fill: #ddc;
         }
+        .county {
+            fill: #ddc;
+        }
         .subunit-boundary {
             fill: none;
             stroke: #777;
@@ -15,7 +18,8 @@
     </style>
 </head>
 <body> 
-<div></div>
+<div id = "state"></div>
+<div id = "county"></div>
 <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 <script src="http://d3js.org/topojson.v1.min.js"></script>
 <script>
@@ -23,7 +27,7 @@
 var width = 960,
     height = 500;
 
-var svg = d3.select("div").append("svg")
+var stateMap = d3.select("#state").append("svg")
     .attr("width", width)
     .attr("height", height);
 
@@ -40,27 +44,66 @@ d3.json("usstates.json", function(error, us) {
     var path = d3.geo.path()
         .projection(projection);
 
-    svg.append("path")
+    stateMap.append("path")
         .datum(subunits)
         .attr("d", path);
 
-    svg.selectAll(".state")
+    stateMap.selectAll(".state")
         .data(topojson.feature(us, us.objects.states).features)
         .enter().append("path")
         .attr("class", function(d) { return "state " + d.id; })
         .attr("d", path);
 
-    svg.append("path")
+    stateMap.append("path")
         .datum(topojson.mesh(us, us.objects.states, function(a, b) { return a !== b;}))
         .attr("d", path)
         .attr("class", "subunit-boundary");
 
-    svg.append("path")
+    stateMap.append("path")
         .datum(topojson.mesh(us, us.objects.states, function(a, b) { return a === b;}))
         .attr("d", path)
         .attr("class", "subunit-boundary exterior");
 
 
+
+});
+
+var countyMap = d3.select("#county").append("svg")
+    .attr("width", width)
+    .attr("height", height);
+
+d3.json("uscounties.json", function(error, us) {
+    if (error) return console.error(error);
+    console.log(us);
+
+    var subunits = topojson.feature(us, us.objects.counties);
+
+    var projection = d3.geo.albersUsa()
+        .scale(750)
+        .translate([width / 2, height / 2]);
+
+    var path = d3.geo.path()
+        .projection(projection);
+
+    countyMap.append("path")
+        .datum(subunits)
+        .attr("d", path);
+
+    countyMap.selectAll(".county")
+        .data(topojson.feature(us, us.objects.counties).features)
+        .enter().append("path")
+        .attr("class", function(d) { return "county " + d.id; })
+        .attr("d", path);
+
+    countyMap.append("path")
+        .datum(topojson.mesh(us, us.objects.counties, function(a, b) { return a !== b;}))
+        .attr("d", path)
+        .attr("class", "subunit-boundary");
+
+    countyMap.append("path")
+        .datum(topojson.mesh(us, us.objects.counties, function(a, b) { return a === b;}))
+        .attr("d", path)
+        .attr("class", "subunit-boundary exterior");
 
 });
 
