--- a/uscensusdata.html
+++ b/uscensusdata.html
@@ -7,8 +7,14 @@
         .state {
             fill: #ddc;
         }
+        .state:hover {
+            fill: red;
+        }
         .county {
             fill: #ddc;
+        }
+        .county:hover {
+            fill: red;
         }
         .subunit-boundary {
             fill: none;
