--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 <body> 
 	<div id = "map">
 	</div>
+	<button onclick="work()">Show Choropleth of population</button>
 	<script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 	<script src="https://d3js.org/topojson.v1.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-	<script src="script.js" charset="utf-8"></script>
 	<script src="usmap.js" charset="utf-8"></script>
+	<script src="script.js" charset="utf-8"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </body> 
 </html>
