--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <title>Project 2</title>
 </head>
 <body> 
+	<div style="width:100%; height:100px; background-color:#636363;">
+        <span style="color:#ffffff; margin: 80px; line-height:100px; font-size:35px;">H590 Project Two</span>
+        <span style=" margin-right:40px; float:right; line-height:230px; font-size:20px;"><a href=project2doc.html >Document</a></span>
+        <span style=" margin-right:40px; float:right; line-height:230px; font-size:20px;"><a href="">Video</a></span>
+        <span style=" margin-right:40px; float:right; line-height:230px; font-size:20px;"><a href="http://www.census.gov/data/developers/data-sets/acs-1yr.html" >Data Source</a></span>
+   	 </div>
+	
 	<div id = "map">
 	</div>
 	<script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
