--- a/index.html
+++ b/index.html
@@ -1,17 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>Project 2</title>
+	<title>2015 ACS Data</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body> 
+<body>
+	<header>
+		<center><h1>Explore the demographic and socio-economic characteristics of the 2015 US population:</h1></center>
+	</header>
 	<div id = "map">
+	</div>
+	<div class = "control">
+		<label for="choropleth">Indicator to visualize:</label>
+		<select name = "choropleth" id="choropleth" onchange="work()">
+			<option value="null">
+			<option value="B01003_001E">Total population
+			<option value="B01002_001E">Median Age
+			<option value="B01002_002E">Median Age - Male
+			<option value="B01002_003E">Median Age - Female
+			<option value="B19013_001E">Median Household Income
+			<option value="B19301_001E">Per Capita Income
+		</select>
 	</div>
 	<script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 	<script src="https://d3js.org/topojson.v1.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/4.1.2/papaparse.min.js" charset="utf-8"></script>
 	<script src="script.js" charset="utf-8"></script>
 	<script src="usmap.js" charset="utf-8"></script>
-	<link rel="stylesheet" type="text/css" href="style.css">
 </body> 
 </html>
