--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 			<option value="B01002_003E">Median Age - Female
 			<option value="B19013_001E">Median Household Income
 			<option value="B19301_001E">Per Capita Income
+			<option value="B08303_005E">Population with Less than 20 Minute Travel Time to Work
+			<option value="B08303_010E">Population with 40 Minute or More Travel Time to Work
+			<option value="B17002_004E">Population in Poverty
+			<option value="B17002_002E">Population in Severe Poverty
 		</select>
 	</div>
 	<script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
