--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 			<option value="B08303_010E">Population with 40 Minute or More Travel Time to Work
 			<option value="B17002_004E">Population in Poverty
 			<option value="B17002_002E">Population in Severe Poverty
+			<option value="B06009_030E">Population of Foreign Born with bachelor or higher degree
+          	        <option value="B06009_024E">Population of Native with bachelor or higher degree
 		</select>
 	</div>
 	<script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
